deadlock, wait notify version2, print1,2,3 waitNotify parameterised